--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,1 @@
-<router-outlet *ngIf="!loginStatus"></router-outlet>
-<app-layout *ngIf="loginStatus"></app-layout>
+<router-outlet></router-outlet>
