--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -1,3 +1,56 @@
-<p>
-  home works!
-</p>
+<quill-editor [(ngModel)]="inputDate.richText">
+    <div quill-editor-toolbar>
+         <span class="ql-formats">
+            <select class="ql-header" [title]="'Format'">
+                <option value="0" selected></option>
+                <option value="1"></option>
+                <option value="2"></option>
+                <option value="3"></option>
+            </select>
+        </span>
+
+        <span class="ql-formats">
+            <button class="ql-bold" [title]="'Bold'"></button>
+        </span>
+
+        <span class="ql-formats">
+            <button class="ql-italic" [title]="'Italic'"></button>
+        </span>
+
+        <span class="ql-formats">
+            <button class="ql-underline" [title]="'Underline'"></button>
+        </span>
+
+        <span class="ql-formats">
+            <button class="ql-link" [title]="'Link'"></button>
+        </span>
+
+        <span class="ql-formats">
+            <select class="ql-align" [title]="'Aligment'">
+                <option selected></option>
+                <option value="center"></option>
+                <option value="right"></option>
+                <option value="justify"></option>
+            </select>
+        </span>
+
+        <span class="ql-formats">
+            <button class="ql-list" value="ordered" [title]="'List1'"></button>
+            <button class="ql-list" value="bullet" [title]="'List2'"></button>
+        </span>
+
+        <span class="ql-formats">
+            <button class="ql-clean" [title]="'Clean'"></button>
+        </span>
+
+        <span class="ql-formats">
+            <button class="ql-image" [title]="'Image'"></button>
+        </span>
+    </div>
+</quill-editor>
+
+<div nz-row nzType="flex" nzJustify="space-around" nzAlign="middle" class="margin-top-10">
+    <div nz-col class="text-align-center" [nzSpan]="24/1">
+        <button nz-button nzType="primary" (click)="save()" [nzLoading]="isLoadingOne">Save</button>
+    </div>
+</div>
