--- a/src/app/component/layout/layout.component.html
+++ b/src/app/component/layout/layout.component.html
@@ -31,6 +31,7 @@
             <nz-breadcrumb style="margin:16px 0;">
                 <nz-breadcrumb-item>User</nz-breadcrumb-item>
                 <nz-breadcrumb-item>Bill</nz-breadcrumb-item>
+                <nz-breadcrumb-item>Bill2</nz-breadcrumb-item>
             </nz-breadcrumb>
             <div style="padding:24px; background: #fff; min-height: 360px;">
                 <router-outlet></router-outlet>
