--- a/src/app/component/layout/layout.component.html
+++ b/src/app/component/layout/layout.component.html
@@ -8,7 +8,7 @@
                 <span title><i nz-icon type="picture"></i><span class="nav-text">Picture</span></span>
                 <ul>
                     <li nz-menu-item [nzSelected]="'PictureIndexComponent' === currentComponent" routerLink="/layout/picture-index">search</li>
-                    <li nz-menu-item [nzSelected]="'PictureInfoComponent' === currentComponent" routerLink="/layout/picture-info">info</li>
+                    <li nz-menu-item [nzSelected]="'PictureInfoComponent' === currentComponent" routerLink="/layout/picture-info">add</li>
                 </ul>
             </li>
             <li nz-submenu>
@@ -40,7 +40,7 @@
                 <nz-breadcrumb-item>Bill2</nz-breadcrumb-item>
             </nz-breadcrumb>
             <div style="padding:24px; background: #fff; min-height: 360px;">
-                <router-outlet></router-outlet>
+                <router-outlet *ngIf="!goLogin"></router-outlet>
             </div>
         </nz-content>
         <nz-footer style="text-align: center;">Ant Design ©2017 Implement By Angular</nz-footer>
