--- a/src/app/component/picture-index/picture-index.component.html
+++ b/src/app/component/picture-index/picture-index.component.html
@@ -1,29 +1,86 @@
 <form nz-form [formGroup]="validateForm" class="ant-advanced-search-form">
-  <div nz-row [nzGutter]="24">
-    <div nz-col [nzSpan]="8" *ngFor="let control of controlArray" [style.display]="control.show?'block':'none'">
-      <nz-form-item nzFlex>
-        <nz-form-label [nzFor]="'field'+control.index">Field {{control.index}}</nz-form-label>
-        <nz-form-control>
-          <input nz-input placeholder="placeholder" [formControlName]="'field'+control.index" [attr.id]="'field'+control.index">
-        </nz-form-control>
-        <nz-form-control>
-          <input nz-input placeholder="placeholder" [formControlName]="'field'+control.index" [attr.id]="'field'+control.index">
-        </nz-form-control>
-      </nz-form-item>
+    <div nz-row [nzGutter]="24">
+        <div nz-col [nzSpan]="8" *ngFor="let control of controlArray" [style.display]="control.show?'block':'none'">
+            <nz-form-item nzFlex>
+                <nz-form-label [nzFor]="'field'+control.index">Field {{control.index}}</nz-form-label>
+                <nz-form-control>
+                    <input nz-input placeholder="placeholder" [formControlName]="'field'+control.index"
+                           [attr.id]="'field'+control.index">
+                </nz-form-control>
+                <nz-form-control>
+                    <input nz-input placeholder="placeholder" [formControlName]="'field'+control.index"
+                           [attr.id]="'field'+control.index">
+                </nz-form-control>
+            </nz-form-item>
+        </div>
     </div>
-  </div>
-  <div nz-row>
-    <div nz-col [nzSpan]="24" style="text-align: right;">
-      <button nz-button [nzType]="'primary'">Search</button>
-      <button nz-button (click)="resetForm()">Clear</button>
-      <button nz-button [nzType]="'primary'">Search</button>
-      <a style="margin-left:8px;font-size:12px;" (click)="toggleCollapse()">
-        Collapse
-        <i nz-icon [type]="isCollapse?'down':'up'"></i>
-      </a>
+    <div nz-row>
+        <div nz-col [nzSpan]="24" style="text-align: right;">
+            <button nz-button [nzType]="'primary'">Search</button>
+            <button nz-button (click)="resetForm()">Clear</button>
+            <button nz-button [nzType]="'primary'">Search</button>
+            <a style="margin-left:8px;font-size:12px;" (click)="toggleCollapse()">
+                Collapse
+                <i nz-icon [type]="isCollapse?'down':'up'"></i>
+            </a>
+        </div>
     </div>
-  </div>
 </form>
+
 <div class="search-result-list">
-  Search Result List
+    <nz-table #editRowTable nzBordered [nzData]="dataSet" [nzFrontPagination]="false">
+        <thead>
+        <tr>
+            <th nzWidth="25%">picture</th>
+            <th nzWidth="15%">name</th>
+            <th nzWidth="40%">type</th>
+            <th>Action</th>
+        </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let data of editRowTable.data">
+                <td>
+                    <div class="editable-cell">
+                        <div class="editable-cell-text-wrapper">
+                            <ng-container *ngIf="!editCache[data.key].edit">
+                                {{data.path}}
+                            </ng-container>
+                            <ng-container *ngIf="editCache[data.key].edit">
+                                <input type="text" nz-input [(ngModel)]="editCache[data.key].data.path">
+                            </ng-container>
+                        </div>
+                    </div>
+                </td>
+                <td>
+                    <ng-container *ngIf="!editCache[data.key].edit">
+                        {{data.name}}
+                    </ng-container>
+                    <ng-container *ngIf="editCache[data.key].edit">
+                        <input type="text" nz-input [(ngModel)]="editCache[data.key].data.name">
+                    </ng-container>
+                </td>
+                <td>
+                    <ng-container *ngIf="!editCache[data.key].edit">
+                        {{data.type}}
+                    </ng-container>
+                    <ng-container *ngIf="editCache[data.key].edit">
+                        <input type="text" nz-input [(ngModel)]="editCache[data.key].data.type">
+                    </ng-container>
+                </td>
+                <td>
+                    <div class="editable-row-operations">
+                        <ng-container *ngIf="!editCache[data.key].edit">
+                            <a (click)="startEdit(data.key)">Edit</a>
+                        </ng-container>
+                        <ng-container *ngIf="editCache[data.key].edit">
+                            <a (click)="saveEdit(data.key)">Save</a>
+                            <nz-popconfirm [nzTitle]="'Sure to cancel?'" (nzOnConfirm)="cancelEdit(data.key)">
+                                <a nz-popconfirm>Cancel</a>
+                            </nz-popconfirm>
+                        </ng-container>
+                    </div>
+                </td>
+            </tr>
+        </tbody>
+    </nz-table>
 </div>
