--- a/src/app/component/picture-index/picture-index.component.scss
+++ b/src/app/component/picture-index/picture-index.component.scss
@@ -7,12 +7,6 @@
 
 .search-result-list {
   margin-top: 16px;
-  border: 1px dashed #e9e9e9;
-  border-radius: 6px;
-  background-color: #fafafa;
-  min-height: 200px;
-  text-align: center;
-  padding-top: 80px;
 }
 
 [nz-form-label] {
@@ -21,4 +15,8 @@
 
 button {
   margin-left: 8px;
+}
+
+.editable-row-operations a {
+  margin-right: 8px;
 }
