--- a/src/app/component/picture-info/picture-info.component.scss
+++ b/src/app/component/picture-info/picture-info.component.scss
@@ -1,9 +1,3 @@
-//:host ::ng-deep i {
-//  font-size: 32px;
-//  color: #999;
-//}
-//
-//:host ::ng-deep .ant-upload-text {
-//  margin-top: 8px;
-//  color: #666;
-//}
+.hidden-domain {
+  display: none;
+}
